[AOT] runtime/cds/appcds/applications/JavacBench.java#aot crashes with SEGV in ClassLoaderData::holder

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 25
    • Affects Version/s: 25
    • Component/s: hotspot
    • b26

      #
      # A fatal error has been detected by the Java Runtime Environment:
      #
      # SIGSEGV (0xb) at pc=0x0000ffff8dc862b0, pid=2908858, tid=2908875
      #
      # JRE version: Java(TM) SE Runtime Environment (25.0+26) (fastdebug build 25-ea+26-LTS-3170)
      # Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 25-ea+26-LTS-3170, mixed mode, sharing, jvmci, jvmci compiler, compressed oops, compressed class ptrs, g1 gc, linux-aarch64)
      # Problematic frame:
      # V [libjvm.so+0x8e92b0] ClassLoaderData::holder() const+0x10
      #

      --------------- T H R E A D ---------------

      Current thread (0x0000fffe880490f0): JavaThread "JVMCI-native CompilerThread1" daemon [_thread_in_vm, id=2908875, stack(0x0000fffea25bf000,0x0000fffea29bb000) (4080K)]

      Current CompileTask:
      JVMCI-native:181 25 java.util.HashMap::putVal (300 bytes)

      Stack: [0x0000fffea25bf000,0x0000fffea29bb000], sp=0x0000fffea29b7570, free space=4065k
      Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [libjvm.so+0x8e92b0] ClassLoaderData::holder() const+0x10 (weakHandle.hpp:56)
      V [libjvm.so+0xffe448] JVMCIKlassHandle::operator=(Klass*) [clone .part.0]+0x28 (klass.inline.hpp:37)
      V [libjvm.so+0x1000f40] c2v_getResolvedJavaType0(JNIEnv_*, _jobject*, _jobject*, long, unsigned char)+0x700 (jvmciCompilerToVM.cpp:84)
      C [libjvmcicompiler.so+0x18b4b34] LibGraalClassLoader_75d3a5e0::jdk.vm.ci.hotspot.HotSpotResolvedObjectTypeImpl* LibGraalClassLoader_75d3a5e0::jdk.vm.ci.hotspot.CompilerToVM::getResolvedJavaType0(java.lang.Object*, long, boolean)+0xc4
      C [libjvmcicompiler.so+0x18e935c] LibGraalClassLoader_75d3a5e0::jdk.vm.ci.hotspot.HotSpotMethodData$RawItemProfile* LibGraalClassLoader_75d3a5e0::jdk.vm.ci.hotspot.HotSpotMethodData$AbstractTypeData::getRawTypeProfile(LibGraalClassLoader_75d3a5e0::jdk.vm.ci.hotspot.HotSpotMethodData*, int)+0x20c
      C [libjvmcicompiler.so+0x18e98ac] LibGraalClassLoader_75d3a5e0::jdk.vm.ci.meta.JavaTypeProfile* LibGraalClassLoader_75d3a5e0::jdk.vm.ci.hotspot.HotSpotMethodData$AbstractTypeData::getTypeProfile(LibGraalClassLoader_75d3a5e0::jdk.vm.ci.hotspot.HotSpotMethodData*, int)+0x7c
      C [libjvmcicompiler.so+0x18fa720] LibGraalClassLoader_75d3a5e0::jdk.vm.ci.meta.JavaTypeProfile* LibGraalClassLoader_75d3a5e0::jdk.vm.ci.hotspot.HotSpotProfilingInfoImpl::getTypeProfile(int)+0x80
      C [libjvmcicompiler.so+0x139f0f8] LibGraalClassLoader_75d3a5e0::jdk.vm.ci.meta.JavaTypeProfile* LibGraalClassLoader_75d3a5e0::jdk.graal.compiler.nodes.spi.StableProfileProvider$CachingProfilingInfo::getTypeProfile(int)+0x108
      C [libjvmcicompiler.so+0xf79bec] LibGraalClassLoader_75d3a5e0::jdk.vm.ci.meta.JavaTypeProfile* LibGraalClassLoader_75d3a5e0::jdk.graal.compiler.java.BytecodeParser::getProfileForInvoke(LibGraalClassLoader_75d3a5e0::jdk.graal.compiler.nodes.CallTargetNode$InvokeKind*)+0xec

      Note: This issue was initially about a crash that has been fixed by JDK-8358236.

            Assignee:
            Douglas Simon
            Reporter:
            Douglas Simon
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: